--- a/WPF/SAM.Analytical.UI.WPF/Controls/AnalyticalModelControl.xaml
+++ b/WPF/SAM.Analytical.UI.WPF/Controls/AnalyticalModelControl.xaml
@@ -10,7 +10,7 @@
         <TabControl VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Margin="0,0,0,0" TabStripPlacement="Bottom">
             <TabItem Header="Model">
                 <Grid Background="#FFE5E5E5">
-                    <TreeView Margin="0,0,0,0" Name="treeView_Model" ContextMenuOpening="treeView_Model_ContextMenuOpening">
+                    <TreeView Margin="0,0,0,0" Name="treeView_Model" ContextMenuOpening="treeView_Model_ContextMenuOpening" PreviewMouseDoubleClick="treeView_Model_PreviewMouseDoubleClick">
                         <TreeView.ContextMenu>
                             <ContextMenu Name ="contextMenu_Model"></ContextMenu>
                         </TreeView.ContextMenu>
