--- a/WPF/SAM.Analytical.UI.WPF/Controls/InternalConditionControl.xaml
+++ b/WPF/SAM.Analytical.UI.WPF/Controls/InternalConditionControl.xaml
@@ -13,7 +13,7 @@
         <Button x:Name="button_Select" Content="Select" HorizontalAlignment="Left" Margin="62,38,0,0" VerticalAlignment="Top" Width="75" Click="button_Select_Click"/>
         <Button x:Name="button_Create" Content="Create" HorizontalAlignment="Left" Margin="142,38,0,0" VerticalAlignment="Top" Width="75" Click="button_Create_Click"/>
         <Button x:Name="button_Reset" Content="Reset" HorizontalAlignment="Left" Margin="222,38,0,0" VerticalAlignment="Top" Width="75" Click="button_Reset_Click"/>
-        <GroupBox HorizontalAlignment="Left" Height="97" Margin="6,104,0,0" VerticalAlignment="Top" Width="437">
+        <GroupBox HorizontalAlignment="Left" Height="97" Margin="10,105,0,0" VerticalAlignment="Top" Width="437">
             <GroupBox.Header>
                 <CheckBox x:Name="checkBox_HeatingProfile" Content="Heating Profile" Click="checkBox_HeatingProfile_Click"/>
             </GroupBox.Header>
@@ -31,29 +31,33 @@
         <Label Content="Color:" HorizontalAlignment="Left" Margin="12,56,0,0" VerticalAlignment="Top"/>
         <Button x:Name="button_Color" Content="" HorizontalAlignment="Left" Margin="62,62,0,0" VerticalAlignment="Top" Width="235" Click="button_Color_Click"/>
 
-        <GroupBox HorizontalAlignment="Left" Height="129" Margin="8,206,0,0" VerticalAlignment="Top" Width="435">
+        <GroupBox HorizontalAlignment="Left" Height="129" Margin="14,516,0,0" VerticalAlignment="Top" Width="435">
             <GroupBox.Header>
                 <CheckBox x:Name="checkBox_OccupancyProfile" Content="Occupancy Profile" Click="checkBox_OccupancyProfile_Click"/>
             </GroupBox.Header>
             <Grid Margin="2,2,2,2">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="168*"/>
+                    <ColumnDefinition Width="251*"/>
+                </Grid.ColumnDefinitions>
                 <Label Content="Name:" HorizontalAlignment="Left" Margin="10,9,0,0" VerticalAlignment="Top"/>
                 <Label Content="Sensible Gain:" HorizontalAlignment="Left" Margin="10,40,0,0" VerticalAlignment="Top"/>
-                <TextBox x:Name="textBox_OccupancyProfile_CalculatedSensibleGain" HorizontalAlignment="Stretch" Height="23" Margin="241,40,131.2,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" IsReadOnly="True" IsEnabled="False"/>
-                <Label Content="[W]" HorizontalAlignment="Left" Margin="289,40,0,0" VerticalAlignment="Top"/>
-                <Button x:Name="button_SelectOccupancyProfile" Content="Select" HorizontalAlignment="Left" Margin="349,12,0,0" VerticalAlignment="Top" Width="60" Click="button_SelectOccupancyProfile_Click"/>
-                <Button x:Name="button_ViewOccupancyProfile" Content="View" HorizontalAlignment="Left" Margin="284,12,0,0" VerticalAlignment="Top" Width="60" Click="button_ViewOccupancyProfile_Click"/>
-                <WPF:MultipleValueComboBoxControl x:Name="multipleValueComboBoxControl_OccupancyProfile_SensibleGainPerPerson" HorizontalAlignment="Stretch" Height="23" Margin="100,40,254.2,0" VerticalAlignment="Top" Width="65" PreviewTextInput="multipleValueComboBoxControl_PreviewTextInput"/>
-                <Label Content="[W/p]" HorizontalAlignment="Left" Margin="166,40,0,0" VerticalAlignment="Top"/>
+                <TextBox x:Name="textBox_OccupancyProfile_CalculatedSensibleGain" HorizontalAlignment="Stretch" Height="23" Margin="73,40,131.2,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" IsReadOnly="True" IsEnabled="False" Grid.Column="1"/>
+                <Label x:Name="label_OccupancyProfile_CalculatedSensibleGain" Content="[W]" HorizontalAlignment="Left" Margin="121,40,0,0" VerticalAlignment="Top" Grid.Column="1"/>
+                <Button x:Name="button_SelectOccupancyProfile" Content="Select" HorizontalAlignment="Left" Margin="181,12,0,0" VerticalAlignment="Top" Width="60" Click="button_SelectOccupancyProfile_Click" Grid.Column="1"/>
+                <Button x:Name="button_ViewOccupancyProfile" Content="View" HorizontalAlignment="Left" Margin="116,12,0,0" VerticalAlignment="Top" Width="60" Click="button_ViewOccupancyProfile_Click" Grid.Column="1"/>
+                <WPF:MultipleValueComboBoxControl x:Name="multipleValueComboBoxControl_OccupancyProfile_SensibleGainPerPerson" HorizontalAlignment="Stretch" Height="23" Margin="100,40,3,0" VerticalAlignment="Top" Width="65" PreviewTextInput="multipleValueComboBoxControl_PreviewTextInput"/>
+                <Label Content="[W/p]" HorizontalAlignment="Left" Margin="166,40,0,0" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
                 <Label Content="Latent Gain:" HorizontalAlignment="Left" Margin="10,71,0,0" VerticalAlignment="Top"/>
-                <TextBox  x:Name="textBox_OccupancyProfile_CalculatedLatentGain" HorizontalAlignment="Stretch" Height="23" Margin="241,71,131.2,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" IsReadOnly="True" IsEnabled="False"/>
-                <Label Content="[W]" HorizontalAlignment="Left" Margin="289,71,0,0" VerticalAlignment="Top"/>
-                <WPF:MultipleValueComboBoxControl x:Name="multipleValueComboBoxControl_OccupancyProfile_LatentGainPerPerson" HorizontalAlignment="Stretch" Height="23" Width="65" Margin="100,71,254.2,0" VerticalAlignment="Top" PreviewTextInput="multipleValueComboBoxControl_PreviewTextInput"/>
-                <Label Content="[W/p]" HorizontalAlignment="Left" Margin="167,71,0,0" VerticalAlignment="Top"/>
-                <WPF:MultipleValueTextBoxControl x:Name="multipleValueTextBoxControl_OccupancyProfile_Name" HorizontalAlignment="Left" Height="19" Margin="60,12,0,0" VerticalAlignment="Top" Width="219"/>
+                <TextBox  x:Name="textBox_OccupancyProfile_CalculatedLatentGain" HorizontalAlignment="Stretch" Height="23" Margin="73,71,131.2,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" IsReadOnly="True" IsEnabled="False" Grid.Column="1"/>
+                <Label x:Name="label_OccupancyProfile_CalculatedLatentGain" Content="[W]" HorizontalAlignment="Left" Margin="121,71,0,0" VerticalAlignment="Top" Grid.Column="1"/>
+                <WPF:MultipleValueComboBoxControl x:Name="multipleValueComboBoxControl_OccupancyProfile_LatentGainPerPerson" HorizontalAlignment="Stretch" Height="23" Width="65" Margin="100,71,3,0" VerticalAlignment="Top" PreviewTextInput="multipleValueComboBoxControl_PreviewTextInput"/>
+                <Label Content="[W/p]" HorizontalAlignment="Left" Margin="167,71,0,0" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
+                <WPF:MultipleValueTextBoxControl x:Name="multipleValueTextBoxControl_OccupancyProfile_Name" HorizontalAlignment="Left" Height="19" Margin="60,12,0,0" VerticalAlignment="Top" Width="219" Grid.ColumnSpan="2"/>
 
             </Grid>
         </GroupBox>
-        <GroupBox HorizontalAlignment="Left" Height="100" Margin="8,340,0,0" VerticalAlignment="Top" Width="435">
+        <GroupBox HorizontalAlignment="Left" Height="100" Margin="10,207,0,0" VerticalAlignment="Top" Width="435">
             <GroupBox.Header>
                 <CheckBox x:Name="checkBox_EquipmentSensibleProfile" Content="Equipment Sensible Profile" Click="checkBox_EquipmentSensibleProfile_Click"/>
             </GroupBox.Header>
@@ -67,11 +71,11 @@
                 <WPF:MultipleValueComboBoxControl x:Name="multipleValueComboBoxControl_EquipmentSensibleProfile_SensibleGainPerArea" HorizontalAlignment="Stretch" Height="23" Width="65" Margin="96,42,258.2,0" VerticalAlignment="Top" PreviewTextInput="multipleValueComboBoxControl_PreviewTextInput"/>
                 <Label Content="[W/m2]" HorizontalAlignment="Left" Margin="159,40,0,0" VerticalAlignment="Top"/>
                 <TextBox x:Name="textBox_EquipmentSensibleProfile_CalculatedSensibleGain" HorizontalAlignment="Stretch" Height="23" Margin="334,43,38.2,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" IsReadOnly="True" IsEnabled="False"/>
-                <Label Content="[W]" HorizontalAlignment="Left" Margin="386,40,0,0" VerticalAlignment="Top"/>
+                <Label x:Name="label_EquipmentSensibleProfile_CalculatedSensibleGain" Content="[W]" HorizontalAlignment="Left" Margin="386,40,0,0" VerticalAlignment="Top"/>
                 <WPF:MultipleValueTextBoxControl x:Name="multipleValueTextBoxControl_EquipmentSensibleProfile_Name" HorizontalAlignment="Left" Height="20" Margin="60,12,0,0" VerticalAlignment="Top" Width="219"/>
             </Grid>
         </GroupBox>
-        <GroupBox HorizontalAlignment="Left" Height="97" Margin="448,104,0,0" VerticalAlignment="Top" Width="444">
+        <GroupBox HorizontalAlignment="Left" Height="97" Margin="453,105,0,0" VerticalAlignment="Top" Width="444">
             <GroupBox.Header>
                 <CheckBox x:Name="checkBox_CoolingProfile" Content="Cooling Profile" Click="checkBox_CoolingProfile_Click"/>
             </GroupBox.Header>
@@ -85,7 +89,7 @@
                 <WPF:MultipleValueTextBoxControl x:Name="multipleValueTextBoxControl_CoolingProfile_Name" HorizontalAlignment="Left" Height="20" Margin="60,10,0,0" VerticalAlignment="Top" Width="228"/>
             </Grid>
         </GroupBox>
-        <GroupBox HorizontalAlignment="Left" Height="97" Margin="8,445,0,0" VerticalAlignment="Top" Width="435">
+        <GroupBox HorizontalAlignment="Left" Height="97" Margin="12,312,0,0" VerticalAlignment="Top" Width="435">
             <GroupBox.Header>
                 <CheckBox x:Name="checkBox_HumidificationProfile" Content="Humidification Profile" Click="checkBox_HumidificationProfile_Click"/>
             </GroupBox.Header>
@@ -100,7 +104,7 @@
 
             </Grid>
         </GroupBox>
-        <GroupBox HorizontalAlignment="Left" Height="97" Margin="448,445,0,0" VerticalAlignment="Top" Width="444">
+        <GroupBox HorizontalAlignment="Left" Height="97" Margin="453,312,0,0" VerticalAlignment="Top" Width="444">
             <GroupBox.Header>
                 <CheckBox x:Name="checkBox_DehumidificationProfile" Content="Dehumidification Profile" Click="checkBox_DehumidificationProfile_Click"/>
             </GroupBox.Header>
@@ -115,7 +119,7 @@
 
             </Grid>
         </GroupBox>
-        <GroupBox HorizontalAlignment="Left" Height="97" Margin="10,547,0,0" VerticalAlignment="Top" Width="433">
+        <GroupBox HorizontalAlignment="Left" Height="97" Margin="14,414,0,0" VerticalAlignment="Top" Width="433">
             <GroupBox.Header>
                 <CheckBox x:Name="checkBox_InfiltrationProfile" Content="Infiltration Profile" Click="checkBox_InfiltrationProfile_Click"/>
             </GroupBox.Header>
@@ -129,7 +133,7 @@
                 <WPF:MultipleValueTextBoxControl x:Name="multipleValueTextBoxControl_InfiltrationProfile_Name" HorizontalAlignment="Left" Height="20" Margin="60,10,0,0" VerticalAlignment="Top" Width="217"/>
             </Grid>
         </GroupBox>
-        <GroupBox HorizontalAlignment="Left" Height="129" Margin="448,206,0,0" VerticalAlignment="Top" Width="444">
+        <GroupBox HorizontalAlignment="Left" Height="178" Margin="453,414,0,0" VerticalAlignment="Top" Width="444">
             <GroupBox.Header>
                 <CheckBox x:Name="checkBox_LightingProfile" Content="Lighting Profile" Click="checkBox_LightingProfile_Click"/>
             </GroupBox.Header>
@@ -143,15 +147,17 @@
                 <Button x:Name="button_ViewLightingProfile" Content="View" HorizontalAlignment="Left" Margin="293,12,0,0" VerticalAlignment="Top" Width="60" Click="button_ViewLightingProfile_Click"/>
                 <WPF:MultipleValueComboBoxControl x:Name="multipleValueComboBoxControl_LightingProfile_LightingGainPerArea" HorizontalAlignment="Stretch" Height="23" Width="65" Margin="99,42,236,0" VerticalAlignment="Top" PreviewTextInput="multipleValueComboBoxControl_PreviewTextInput"/>
                 <Label Content="[W/m2]" HorizontalAlignment="Left" Margin="181,40,0,0" VerticalAlignment="Top"/>
-                <Label Content="Lighting Level:" HorizontalAlignment="Left" Margin="10,71,0,0" VerticalAlignment="Top"/>
+                <Label Content="Lighting Level:" HorizontalAlignment="Left" Margin="10,110,0,0" VerticalAlignment="Top"/>
                 <TextBox  x:Name="textBox_LightingProfile_CalculatedLightingGain" HorizontalAlignment="Stretch" Height="23" Margin="352,43,29,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" IsReadOnly="True" IsEnabled="False"/>
-                <Label Content="[W]" HorizontalAlignment="Left" Margin="401,40,-2,0" VerticalAlignment="Top"/>
-                <WPF:MultipleValueComboBoxControl x:Name="multipleValueComboBoxControl_LightingProfile_LightLevel" HorizontalAlignment="Stretch" Height="23" Width="65" Margin="99,73,236,0" VerticalAlignment="Top" PreviewTextInput="multipleValueComboBoxControl_PreviewTextInput"/>
-                <Label Content="[lux]" HorizontalAlignment="Left" Margin="181,71,0,0" VerticalAlignment="Top"/>
+                <Label x:Name="label_LightingProfile_CalculatedLightingGain" Content="[W]" HorizontalAlignment="Left" Margin="401,40,-2,0" VerticalAlignment="Top"/>
+                <WPF:MultipleValueComboBoxControl x:Name="multipleValueComboBoxControl_LightingProfile_LightLevel" HorizontalAlignment="Stretch" Height="23" Width="65" Margin="113,112,250,0" VerticalAlignment="Top" PreviewTextInput="multipleValueComboBoxControl_PreviewTextInput"/>
+                <Label Content="[lux]" HorizontalAlignment="Left" Margin="181,110,0,0" VerticalAlignment="Top"/>
+                <WPF:MultipleValueComboBoxControl x:Name="multipleValueComboBoxControl_LightingProfile_LightingGainPerPerson" HorizontalAlignment="Stretch" Height="23" Width="65" Margin="113,78,250,0" VerticalAlignment="Top" PreviewTextInput="multipleValueComboBoxControl_PreviewTextInput"/>
+                <Label Content="[W/p]" HorizontalAlignment="Left" Margin="181,76,0,0" VerticalAlignment="Top"/>
 
             </Grid>
         </GroupBox>
-        <GroupBox HorizontalAlignment="Left" Height="100" Margin="448,340,0,0" VerticalAlignment="Top" Width="444">
+        <GroupBox HorizontalAlignment="Left" Height="100" Margin="453,207,0,0" VerticalAlignment="Top" Width="444">
             <GroupBox.Header>
                 <CheckBox x:Name="checkBox_EquipmentLatentProfile" Content="Equipment Latent Profile" Click="checkBox_EquipmentLatentProfile_Click"/>
             </GroupBox.Header>
@@ -166,7 +172,7 @@
                 <WPF:MultipleValueComboBoxControl x:Name="multipleValueComboBoxControl_EquipmentLatentProfile_LatentGainPerArea" HorizontalAlignment="Stretch" Height="23" Width="65" Margin="113,40,250,0" VerticalAlignment="Top" PreviewTextInput="multipleValueComboBoxControl_PreviewTextInput"/>
                 <Label Content="[W/m2]" HorizontalAlignment="Left" Margin="183,40,0,0" VerticalAlignment="Top"/>
                 <TextBox x:Name="textBox_EquipmentLatentProfile_CalculatedLatentGain" HorizontalAlignment="Stretch" Height="23" Margin="349,43,29,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" IsReadOnly="True" IsEnabled="False"/>
-                <Label Content="[W]" HorizontalAlignment="Left" Margin="402,40,-3,0" VerticalAlignment="Top"/>
+                <Label x:Name="label_EquipmentLatentProfile_CalculatedLatentGain" Content="[W]" HorizontalAlignment="Left" Margin="402,40,-3,0" VerticalAlignment="Top"/>
 
             </Grid>
         </GroupBox>
@@ -194,19 +200,16 @@
 
             </Grid>
         </GroupBox>
-        <GroupBox HorizontalAlignment="Left" Height="97" Margin="448,2,0,0" VerticalAlignment="Top" Width="444">
+        <GroupBox HorizontalAlignment="Left" Height="65" Margin="453,12,0,0" VerticalAlignment="Top" Width="444">
             <GroupBox.Header>
                 <CheckBox x:Name="checkBox_Occupancy" Content="Occupancy" Checked="checkBox_Occupancy_Checked"/>
             </GroupBox.Header>
             <Grid Margin="2,2,2,2">
                 <Label Content="Internal Condition:" HorizontalAlignment="Left" Margin="10,7,0,0" VerticalAlignment="Top"/>
-                <Label Content="Space:" HorizontalAlignment="Left" Margin="10,38,0,0" VerticalAlignment="Top"/>
-                <WPF:MultipleValueComboBoxControl x:Name="multipleValueComboBoxControl_AreaPerPerson" HorizontalAlignment="Stretch" Height="23" Width="65" Margin="245,10,118,0" VerticalAlignment="Top" PreviewTextInput="multipleValueComboBoxControl_PreviewTextInput"/>
-                <Label Content="[m2/p]" HorizontalAlignment="Left" Margin="315,7,0,0" VerticalAlignment="Top"/>
-                <WPF:MultipleValueComboBoxControl x:Name="multipleValueComboBoxControl_Occupancy" HorizontalAlignment="Stretch" Height="23" Margin="132,10,231,0" VerticalAlignment="Top"/>
-                <Label Content="[p]" HorizontalAlignment="Left" Margin="202,7,0,0" VerticalAlignment="Top"/>
-                <WPF:MultipleValueComboBoxControl x:Name="multipleValueComboBoxControl_SpaceOccupancy" HorizontalAlignment="Stretch" Height="23" Margin="132,38,231,0" VerticalAlignment="Top"/>
-                <Label Content="[p]" HorizontalAlignment="Left" Margin="202,35,0,0" VerticalAlignment="Top"/>
+                <WPF:MultipleValueComboBoxControl x:Name="multipleValueComboBoxControl_AreaPerPerson" HorizontalAlignment="Stretch" Height="23" Width="65" Margin="124,10,239,0" VerticalAlignment="Top" PreviewTextInput="multipleValueComboBoxControl_PreviewTextInput"/>
+                <Label Content="[m2/p]" HorizontalAlignment="Left" Margin="194,7,0,0" VerticalAlignment="Top"/>
+                <WPF:MultipleValueComboBoxControl x:Name="multipleValueComboBoxControl_Occupancy" HorizontalAlignment="Stretch" Height="23" Margin="287,10,76,0" VerticalAlignment="Top"/>
+                <Label x:Name="label_Occupancy" Content="[p]" HorizontalAlignment="Left" Margin="357,7,0,0" VerticalAlignment="Top"/>
             </Grid>
         </GroupBox>
 
